[package]
name = "udp-socket"
version = "0.1.5"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Advanced udp socket."
repository = "https://github.com/ipfs-rust/udp-socket"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.92"
socket2 = "0.4.0"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.40"
env_logger = "0.8.3"
log = "0.4.14"
